log
Thu 28 Mar 2024 05:39:42 PM UTC: 
 tests:  0|6
total_score: 0/70
bb90029
Thu 28 Mar 2024 05:41:43 PM UTC: 
 list.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
58f044a
Thu 28 Mar 2024 05:42:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
11dc052
Thu 28 Mar 2024 05:44:05 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f4d81e9
Thu 28 Mar 2024 05:45:44 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
68676eb
Thu 28 Mar 2024 05:46:48 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
b0606eb
Thu 28 Mar 2024 05:47:56 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
55ff2df
Thu 28 Mar 2024 05:49:37 PM UTC: 
 list.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
55ff2df
Thu 28 Mar 2024 06:08:57 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
6eba8b6
Thu 28 Mar 2024 06:23:43 PM UTC: 
 list.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  0|0
6b7c719
Thu 28 Mar 2024 06:25:06 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
ae2fa3e
Thu 28 Mar 2024 06:28:18 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
6fad26a
Thu 28 Mar 2024 06:38:42 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
c985f0e
Thu 28 Mar 2024 06:39:07 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
301488a
Thu 28 Mar 2024 06:39:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
584a7a0
Thu 28 Mar 2024 06:41:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
805d7f1
Thu 28 Mar 2024 06:44:20 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  9|3
total_score: 35/70
73b1c18
Thu 28 Mar 2024 06:47:47 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
bd47690
Thu 28 Mar 2024 06:48:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
e7bb935
Thu 28 Mar 2024 06:50:00 PM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
da2eba7
Thu 28 Mar 2024 06:50:15 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7656efd
Thu 28 Mar 2024 06:51:18 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
c94b400
Thu 28 Mar 2024 06:52:27 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
23f2e62
Thu 28 Mar 2024 06:52:50 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
47d5cd9
Thu 28 Mar 2024 06:56:42 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
3f95761
Thu 28 Mar 2024 07:00:25 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
48cf4f8
Thu 28 Mar 2024 07:04:08 PM UTC: 
 list.c | 9 ++++-----
 1 file changed, 4 insertions(+), 5 deletions(-)
 tests:  10|2
total_score: 45/70
9ccbbd7
Thu 28 Mar 2024 07:05:12 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
b5deb9d
Thu 28 Mar 2024 07:09:58 PM UTC: 
 list.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:96:10: error: unused variable ‘newNode’ [-Werror=unused-variable]
   96 |   Node * newNode = createNode(data);
      |          ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
cc42f45
Thu 28 Mar 2024 07:10:10 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  10|2
total_score: 45/70
2ec87e3
Thu 28 Mar 2024 07:11:48 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
993fe16
Thu 28 Mar 2024 07:28:37 PM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  0|0
44c7e57
Thu 28 Mar 2024 07:31:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
425aaf8
Thu 28 Mar 2024 07:34:16 PM UTC: 
 list.c | 14 ++++++--------
 1 file changed, 6 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
03ce6c1
Thu 28 Mar 2024 09:49:56 PM UTC: 
 list.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  0|0
7822997
Thu 28 Mar 2024 10:12:12 PM UTC: 
 list.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:128:13: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  128 |   aux->next = list->current->next;
      |   ~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a0db843
Thu 28 Mar 2024 10:12:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:122:5: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
  122 |   if(aux == NULL)
      |     ^
cc1: all warnings being treated as errors
Compilation failed
134e83c
Thu 28 Mar 2024 10:12:53 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
a971191
Thu 28 Mar 2024 10:14:14 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
86b7789
Thu 28 Mar 2024 10:14:53 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  10|2
total_score: 45/70
75d8f86
Thu 28 Mar 2024 10:15:52 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
e32b28b
Thu 28 Mar 2024 10:18:11 PM UTC: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  10|2
total_score: 45/70
5c5284c
Thu 28 Mar 2024 10:19:16 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
4d9ced0
Thu 28 Mar 2024 10:20:27 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  0|0
e2c5cbb
Thu 28 Mar 2024 10:20:55 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2499891
Thu 28 Mar 2024 10:22:22 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
2042035
Thu 28 Mar 2024 10:22:50 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
f657cb6
Thu 28 Mar 2024 10:23:40 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|0
a04ae28
Thu 28 Mar 2024 10:36:12 PM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|0
c434a13
Thu 28 Mar 2024 10:37:26 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
ba4c155
Thu 28 Mar 2024 10:38:27 PM UTC: 
 list.c | 7 +------
 1 file changed, 1 insertion(+), 6 deletions(-)
In file included from test.c:5:
list.c: In function ‘popCurrent’:
list.c:121:14: error: format ‘%i’ expects argument of type ‘int’, but argument 2 has type ‘void *’ [-Werror=format=]
  121 |     printf("%i", list->current->data);
      |             ~^   ~~~~~~~~~~~~~~~~~~~
      |              |                |
      |              int              void *
      |             %p
cc1: all warnings being treated as errors
Compilation failed
6c5cf83
Thu 28 Mar 2024 10:38:42 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
4a93fbc
Thu 28 Mar 2024 10:39:38 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
b9c0f47
Thu 28 Mar 2024 10:43:41 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
2a98d35
Thu 28 Mar 2024 10:43:56 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
075e29b
Thu 28 Mar 2024 10:44:30 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  10|2
total_score: 45/70
453f4b5
Thu 28 Mar 2024 10:44:46 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
2c3d577
